fixed -- elementor-add-section-area-button spacing

--- a/assets/admin/css/eael-templately-promo.css
+++ b/assets/admin/css/eael-templately-promo.css
@@ -1,12 +1,16 @@
-.elementor-add-new-section .elementor-add-templately-promo-button{
+.elementor-add-new-section .elementor-add-templately-promo-button {
 	background-color: red;
 	background-image: url(../images/templately/logo-icon.svg);
 	background-repeat: no-repeat;
 	background-position: center center;
 }
 
-.elementor-add-new-section .elementor-add-templately-promo-button > i{
+.elementor-add-new-section .elementor-add-templately-promo-button > i {
 	height: 12px;
+}
+
+.elementor-add-new-section .elementor-add-section-area-button {
+	margin-left: 0;
 }
 
 #eael-templately-promo-popup.dialog-type-lightbox .dialog-widget-content {
